// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`maxWidth renders 0 1`] = `
Array [
  .c0 {
  max-width: 0;
}

<div
    className="c0"
  />,
  .c0 {
  max-width: 0;
}

<div
    className="c0"
  />,
  .c0 {
  max-width: 0;
}

<div
    className="c0"
  />,
  .c0 {
  max-width: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`maxWidth renders function 1`] = `
Array [
  .c0 {
  max-width: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  max-width: has;
}

<div
    className="c0"
  />,
  .c0 {
  max-width: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  max-width: has;
}

<div
    className="c0"
  />,
]
`;

exports[`maxWidth renders invalid theme path 1`] = `
Array [
  .c0 {
  max-width: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  max-width: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  max-width: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  max-width: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`maxWidth renders negative number 1`] = `
Array [
  .c0 {
  max-width: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  max-width: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  max-width: -42365px;
}

<div
    className="c0"
  />,
  .c0 {
  max-width: -42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`maxWidth renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    max-width: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    max-width: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    max-width: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    max-width: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    max-width: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    max-width: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    max-width: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    max-width: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    max-width: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    max-width: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    max-width: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    max-width: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    max-width: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    max-width: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    max-width: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    max-width: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`maxWidth renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    max-width: July;
  }
}

@media April {
  .c0 {
    max-width: August;
  }
}

@media January {
  .c0 {
    max-width: September;
  }
}

@media April {
  .c0 {
    max-width: November;
  }
}

@media June {
  .c0 {
    max-width: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    max-width: July;
  }
}

@media April {
  .c0 {
    max-width: August;
  }
}

@media January {
  .c0 {
    max-width: September;
  }
}

@media April {
  .c0 {
    max-width: November;
  }
}

@media June {
  .c0 {
    max-width: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    max-width: January;
  }
}

@media April {
  .c0 {
    max-width: December;
  }
}

@media January {
  .c0 {
    max-width: April;
  }
}

@media April {
  .c0 {
    max-width: May;
  }
}

@media June {
  .c0 {
    max-width: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    max-width: January;
  }
}

@media April {
  .c0 {
    max-width: December;
  }
}

@media January {
  .c0 {
    max-width: April;
  }
}

@media April {
  .c0 {
    max-width: May;
  }
}

@media June {
  .c0 {
    max-width: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`maxWidth renders postitive number 1`] = `
Array [
  .c0 {
  max-width: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  max-width: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  max-width: 42365px;
}

<div
    className="c0"
  />,
  .c0 {
  max-width: 42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`maxWidth renders string 1`] = `
Array [
  .c0 {
  max-width: July;
}

<div
    className="c0"
  />,
  .c0 {
  max-width: July;
}

<div
    className="c0"
  />,
  .c0 {
  max-width: June;
}

<div
    className="c0"
  />,
  .c0 {
  max-width: June;
}

<div
    className="c0"
  />,
]
`;

exports[`maxWidth renders valid theme path 1`] = `
Array [
  .c0 {
  max-width: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  max-width: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  max-width: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  max-width: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
